# MockAPI

./: .gitignore  README.md  pyproject.toml
src/mockapi/: __init__.py  error.py  log.py  main.py
src/mockapi/controllers/: base.py  json.py  manager.py  yaml.py
src/mockapi/options/: options.py  parser.py
src/mockapi/responses/: mock_testy.yaml
src/mockapi/routes/: basic.py
